--- a/react-app/src/pages/login/Login.css
+++ b/react-app/src/pages/login/Login.css
@@ -8,8 +8,10 @@ padding: 0;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #77AFD4;
-    /* background-image: url('bg.png'); */
+    /* background-color: #77AFD4; */
+    background-image: url('https://goldeneragrooves.s3.us-east-2.amazonaws.com/cloudscreen.jpg');
+    /* background-repeat: no-repeat; */
+    background-size: cover;
     background-repeat: repeat-x;
 
 }
@@ -19,7 +21,7 @@ padding: 0;
     /* Windows XP login box background color */
     border: 1px solid #000;
     padding: 0;
-    box-shadow: 0px 0px 10px #000;
+    /* box-shadow: 0px 0px 10px #000; */
     width: 350px;
 }
 
@@ -32,6 +34,7 @@ padding: 0;
     padding: 5px 10px;
     cursor: move;
 }
+
 
 .logo img {
     width: 24px;
