--- a/react-app/src/components/Songs/style.css
+++ b/react-app/src/components/Songs/style.css
@@ -25,8 +25,8 @@
 }
 
 .songs:hover {
-  background-color: #000A71;
-  color: white
+  background-color: #000a71;
+  color: white;
 }
 
 .id-column {
