--- a/react-app/src/pages/login/Login.css
+++ b/react-app/src/pages/login/Login.css
@@ -8,10 +8,8 @@ padding: 0;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    /* background-color: #77AFD4; */
-    background-image: url('https://goldeneragrooves.s3.us-east-2.amazonaws.com/cloudscreen.jpg');
-    /* background-repeat: no-repeat; */
-    background-size: cover;
+    background-color: #77AFD4;
+    /* background-image: url('bg.png'); */
     background-repeat: repeat-x;
 
 }
@@ -21,7 +19,7 @@ padding: 0;
     /* Windows XP login box background color */
     border: 1px solid #000;
     padding: 0;
-    /* box-shadow: 0px 0px 10px #000; */
+    box-shadow: 0px 0px 10px #000;
     width: 350px;
 }
 
@@ -34,7 +32,6 @@ padding: 0;
     padding: 5px 10px;
     cursor: move;
 }
-
 
 .logo img {
     width: 24px;
