--- a/react-app/src/pages/login/Login.css
+++ b/react-app/src/pages/login/Login.css
@@ -1,4 +1,4 @@
-* {
+/* * {
 margin: 0;
 padding: 0;
 }
@@ -8,33 +8,30 @@ padding: 0;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    /* background-color: #77AFD4; */
-    background-image: url('https://goldeneragrooves.s3.us-east-2.amazonaws.com/cloudscreen.jpg');
-    /* background-repeat: no-repeat; */
-    background-size: cover;
+    background-color: #77AFD4;
+
     background-repeat: repeat-x;
 
 }
 
 .login-box {
     background-color: #C0C0C0;
-    /* Windows XP login box background color */
+
     border: 1px solid #000;
     padding: 0;
-    /* box-shadow: 0px 0px 10px #000; */
+    box-shadow: 0px 0px 10px #000;
     width: 350px;
 }
 
 .login-title-bar {
     background-color: #094CAE;
-    /* Windows XP title bar color */
+
     color: #fff;
     display: flex;
     align-items: center;
     padding: 5px 10px;
     cursor: move;
 }
-
 
 .logo img {
     width: 24px;
@@ -95,7 +92,7 @@ padding: 0;
     width: 100%;
     padding: 10px;
     background-color: #008080;
-    /* Windows XP button color */
+
     color: #fff;
     font-weight: bold;
     border: none;
@@ -104,21 +101,20 @@ padding: 0;
 
 .login-button:hover {
     background-color: #006666;
-    /* Windows XP button color on hover */
+
 }
 
 .signup-button {
     width: 100%;
     padding: 10px;
     background-color: #C0C0C0;
-    /* Windows XP button color */
+
     color: black;
     font-weight: bold;
     border: none;
     cursor: pointer;
 }
 
-/* Additional styles for buttons */
 .minimize-button:hover,
 .maximize-button:hover,
 .close-button:hover {
@@ -136,8 +132,93 @@ padding: 0;
 .maximized .login-title-bar {
     border-radius: 0;
 }
+*/
 
 .maximized .window-controls {
     gap: 10px;
 
+}
+
+.input-login {
+    display: flex;
+    padding: 10.5px 11px 14px 11px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    align-self: stretch;
+    /* width: auto; */
+
+}
+.custom-link {
+    color: #333; /* Set your desired text color */
+    text-decoration: none; /* Remove underlines */
+  }
+.logo-login{
+    width: 50px;
+    height: 48px;
+    flex-shrink: 0;
+}
+.down-login {
+display: flex;
+height: 63px;
+padding: 10px 19px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 7px;
+align-self: stretch;
+}
+.title-bar.loginmodal {
+    width: 20%;
+    height: auto;
+    margin: 0;
+    padding: 0
+}
+.window-body{
+    background-color: #DFDFDF;
+    margin: 0;
+     padding: 0;
+     /* box-sizing: border-box; */
+    display:flex;
+    justify-content: center;
+    width: 20%;
+}
+.centered-container {
+    background-color: #c0c0c0;
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+    justify-content: center; /* Center vertically */
+    align-items: center; /* Center horizontally */
+    height: 100vh; /* 100% of viewport height */
+    /* Add width and other styles as needed for the container */
+  }
+.down-login >span{
+font-family: Microsoft Sans Serif;
+text-align: center;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 12px;
+text-decoration-line: underline;
+cursor: pointer;
+color: black
+}
+.down-login > button {
+    cursor: pointer;
+}
+
+.login-info {
+    display: flex;
+    width: 192.2px;
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.login-email,
+.login-password,
+.login-username {
+  margin-bottom: 10px; /* Add margin to create spacing between the components */
 }
