--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -183,13 +183,16 @@ padding: 0;
   width: 20%;
 }
 .centered-container {
-  background-color: #018282;
+  background-image:url('https://casacloudpics.s3.us-east-2.amazonaws.com/background2.jpg');
   display: flex;
-  flex-direction: column; /* Stack elements vertically */
-  justify-content: center; /* Center vertically */
-  align-items: center; /* Center horizontally */
-  height: 100vh; /* 100% of viewport height */
-  /* Add width and other styles as needed for the container */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
 }
 .down-login > span {
   font-family: Microsoft Sans Serif;
