--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -11,7 +11,7 @@ body {
   background-color: #c0c0c0;
   padding: 0px 5px 0px 5px;
   overflow: hidden;
-  font-family: 'Ms-Sans-Serif', sans-serif;
+  font-family: 'Ms-Sans-Serif', sans-serif !important;
 
 }
 @font-face {
