--- a/react-app/src/components/Modal/style.css
+++ b/react-app/src/components/Modal/style.css
@@ -11,7 +11,7 @@
   background-color: white;
   overflow-y: auto;
 
-  height: auto;
+  height: 600px;
   border-width: 1px;
   border-style: outset;
   border-color: buttonface;
