--- a/react-app/src/components/Songs/style.css
+++ b/react-app/src/components/Songs/style.css
@@ -50,12 +50,13 @@
 }
 
 .date-added-column {
-  flex: 2;
+  flex: 1;
   font-weight: bold;
 }
 
 .duration-column {
   flex: 2;
+  font-weight: bold;
 
 }
 
@@ -63,7 +64,7 @@
   display: flex;
   flex-direction: column;
   flex: 3;
-  gap: 6px;
+  gap: 7px;
 }
 
 .active {
